--- a/index.html
+++ b/index.html
@@ -567,22 +567,22 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>anupgarh,rajasthan,india</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>dheeraj43576@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+919079350905</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/place/Anupgarh,+Rajasthan+335701/@29.1615002,73.2051728,7594m/data=!3m1!1e3!4m15!1m8!3m7!1s0x393de46c27c25fc5:0x53f44bfc7dc7c8c0!2sAnupgarh,+Rajasthan+335701!3b1!8m2!3d29.1811533!4d73.1998604!16zL20vMGYwNXA4!3m5!1s0x393de46c27c25fc5:0x53f44bfc7dc7c8c0!8m2!3d29.1811533!4d73.1998604!16zL20vMGYwNXA4?entry=ttu" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div>
