--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       <div class="profile">
         <img src="assets\img\dk.jpeg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Dheeraj Kumar</a></h1>
+        <h4>@KBcutecoder</h4>
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -112,7 +113,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>29</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bmc,BLIS,Master</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>dheeraj43576@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>KBcutecoder</span></li>
                 </ul>
               </div>
             </div>
@@ -131,8 +132,7 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
+          </div>
 
         <div class="row no-gutters">
 
@@ -444,7 +444,7 @@
               <div class="testimonial-item" data-aos="fade-up">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                  I think the service provided by The KBcutecoder was very useful for the development of my page. It is clear that they have a lot of knowledge on the subject and communication was always very clear and fluid. Highly recommended.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
@@ -457,7 +457,7 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                  Working with the KBcutecoder was easy and fun, they gave me all the resources and info and helped to find a free template, the website came out simple and beautiful, just as I wanted. Thank you so much KBcutecoder, it was a pleasure working with you."
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
@@ -470,7 +470,7 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                  The KBcutecoder offer more than just website design; they create a personalized experience that prioritizes client satisfaction. I felt like a valued partner throughout the process, and my input was genuinely considered.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
@@ -483,7 +483,7 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                 KBcutecoder made the process very easy to follow, helped make my website look way better than I could have done on my own. I appreciate all the work they have done to help my page look more professional!
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
@@ -496,7 +496,8 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+                  Excellent Experience with The KBcutecoder
+                  My experience with The KBcutecoder was fantastic. and they created a customised, visually appealing, and responsive website for me. The process was user friendly, and their customer support was outstanding
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
@@ -542,8 +543,8 @@
                 <h4>Call:</h4>
                 <p>+919079350905</p>
               </div>
-
-              <iframe src="https://www.google.com/maps/place/Anupgarh,+Rajasthan+335701/@29.1615002,73.2051728,7594m/data=!3m1!1e3!4m15!1m8!3m7!1s0x393de46c27c25fc5:0x53f44bfc7dc7c8c0!2sAnupgarh,+Rajasthan+335701!3b1!8m2!3d29.1811533!4d73.1998604!16zL20vMGYwNXA4!3m5!1s0x393de46c27c25fc5:0x53f44bfc7dc7c8c0!8m2!3d29.1811533!4d73.1998604!16zL20vMGYwNXA4?entry=ttu" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25312.048393616584!2d73.1576868942429!3d29.173713007106674!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x393de46c27c25fc5%3A0x53f44bfc7dc7c8c0!2sAnupgarh%2C%20Rajasthan%20335701!5e1!3m2!1sen!2sin!4v1694851469621!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
           </div>
