--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="profile">
         <img src="assets\img\dk.jpeg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Dheeraj Kumar</a></h1>
-        <h4>@KBcutecoder</h4>
+        <h6 class="text-light">KBcutecoder</h6>
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -496,8 +496,7 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Excellent Experience with The KBcutecoder
-                  My experience with The KBcutecoder was fantastic. and they created a customised, visually appealing, and responsive website for me. The process was user friendly, and their customer support was outstanding
+                  Excellent experience with The KBcutecoder was fantastic. and they created a customised, visually appealing, and responsive website for me. The process was user friendly, and their customer support was outstanding
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
@@ -519,8 +518,7 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
+          </div>
 
         <div class="row" data-aos="fade-in">
 
