--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
+                <h3>Pankaj ojha</h3>
                 <h4>Ceo &amp; Founder</h4>
               </div>
             </div><!-- End testimonial item -->
@@ -458,7 +458,7 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
+                <h3>Geeta sharma</h3>
                 <h4>Designer</h4>
               </div>
             </div><!-- End testimonial item -->
@@ -471,8 +471,8 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
-                <h4>Store Owner</h4>
+                <h3>Sonu garg</h3>
+                <h4> web Designer</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -483,8 +483,8 @@
                  KBcutecoder made the process very easy to follow, helped make my website look way better than I could have done on my own. I appreciate all the work they have done to help my page look more professional!
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
+                <img src="assets\img\WhatsApp Image 2023-12-30 at 2.45.24 PM.jpeg" class="testimonial-img" alt="">
+                <h3>vakil singh</h3>
                 <h4>Freelancer</h4>
               </div>
             </div><!-- End testimonial item -->
@@ -497,8 +497,8 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>John Larson</h3>
-                <h4>Entrepreneur</h4>
+                <h3>sukhchan singh</h3>
+                <h4>freelance</h4>
               </div>
             </div><!-- End testimonial item -->
 
