--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                   I think the service provided by The KBcutecoder was very useful for the development of my page. It is clear that they have a lot of knowledge on the subject and communication was always very clear and fluid. Highly recommended.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+                <img src="assets\img\Screenshot 2023-12-30 151049.png" class="testimonial-img" alt="">
                 <h3>Pankaj ojha</h3>
                 <h4>Ceo &amp; Founder</h4>
               </div>
@@ -470,8 +470,8 @@
                   The KBcutecoder offer more than just website design; they create a personalized experience that prioritizes client satisfaction. I felt like a valued partner throughout the process, and my input was genuinely considered.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Sonu garg</h3>
+                <img src="assets\img\Screenshot 2023-12-30 151119.png" class="testimonial-img" alt="">
+                <h3>Sonia ojha</h3>
                 <h4> web Designer</h4>
               </div>
             </div><!-- End testimonial item -->
