--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
                   Working with the KBcutecoder was easy and fun, they gave me all the resources and info and helped to find a free template, the website came out simple and beautiful, just as I wanted. Thank you so much KBcutecoder, it was a pleasure working with you."
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+                <img src="assets\img\View recent photos.png" class="testimonial-img" alt="">
                 <h3>Geeta sharma</h3>
                 <h4>Designer</h4>
               </div>
@@ -470,7 +470,7 @@
                   The KBcutecoder offer more than just website design; they create a personalized experience that prioritizes client satisfaction. I felt like a valued partner throughout the process, and my input was genuinely considered.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets\img\Screenshot 2023-12-30 151119.png" class="testimonial-img" alt="">
+                <img src=" assets\img\Screenshot 2023-12-30 151119.png" class="testimonial-img" alt="">
                 <h3>Sonia ojha</h3>
                 <h4> web Designer</h4>
               </div>
@@ -496,7 +496,7 @@
                   Excellent experience with The KBcutecoder was fantastic. and they created a customised, visually appealing, and responsive website for me. The process was user friendly, and their customer support was outstanding
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+                <img src="assets\img\WhatsApp Image 2023-12-30 at 4.02.32 PM.jpeg" class="testimonial-img" alt="">
                 <h3>sukhchan singh</h3>
                 <h4>freelance</h4>
               </div>
